[package]
name = "netcrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1.0.0"
clap = { version = "4.2.2", features = ["derive"] }
console = "0.15.7"
socket2 = "0.5.3"
default-net = "0.16.0"
rand = "0.8.5"
lazy_static = "1.4.0"
