[package]
name = "netcrab"
description = "A multi-purpose TCP/UDP listener and connector"
keywords = ["tcp", "udp", "networking", "sockets"]
categories = ["network-programming", "command-line-utilities"]
version = "0.6.1"
authors = ["knutaf"]
edition = "2021"
repository = "https://github.com/knutaf/netcrab"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1.0"
clap = { version = "4.2", features = ["derive"] }
console = "0.15"
socket2 = "0.5"
default-net = "0.16"
rand = "0.8"
lazy_static = "1.4"
regex = "1.9"
